--- a/products/templates/_base.html
+++ b/products/templates/_base.html
@@ -1,17 +1,19 @@
 {% load static %}
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Re-position | {% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/output.css' %}">
-</head>
-
-<body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ecommerce website">
+    <meta name="keywords" content="ecommerce, shop, clothes, fashion">
+    <title>Re-position |
+      {% block title %}
+      {% endblock title %}
+    </title>
+    <link rel="stylesheet" href="{% static 'css/output.css' %}" />
+  </head>
+  <body>
     {% block content %}
     {% endblock content %}
-</body>
-
+  </body>
 </html>
