--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,7 +1,6 @@
 {% extends "_base.html" %}
-
-{% block title %}Products{% endblock %}
-
+{% block title %}
+  Products
+{% endblock title %}
 {% block content %}
-
-{% endblock %}
+{% endblock content %}
