Deploy pull request preview apps

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -3,4 +3,5 @@
   Products
 {% endblock title %}
 {% block content %}
+  <h1 class="text-red-500 text-lg">Products Page</h1>
 {% endblock content %}
