--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -3,5 +3,5 @@
   Products
 {% endblock title %}
 {% block content %}
-  <h1 class="text-red-500 text-lg">Products Page</h1>
+  {% product_list products=products %}
 {% endblock content %}
