Render product details

--- a/templates/components/product_list.html
+++ b/templates/components/product_list.html
@@ -1,3 +1,4 @@
+{% load humanize %}
 <div class="bg-white">
   <div class="mx-auto max-w-2xl px-4 pt-8 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="text-2xl mb-8">
@@ -16,12 +17,12 @@
           </div>
           <div class="flex flex-1 flex-col space-y-2 p-4">
             <h3 class="text-sm text-gray-700">
-              <a href="#">
+              <a href="{% url 'product-detail' product.id %}">
                 <span class="absolute inset-0"></span>
                 {{ product.name }}
               </a>
             </h3>
-            <p class="mt-1 font-medium text-gray-900">₦ {{ product.price }}</p>
+            <p class="mt-1 font-medium text-gray-900">₦{{ product.price | floatformat:2 | intcomma }}</p>
             <div class="gr z-10 flex flex-1 flex-col justify-end gap-y-2">
               <button type="button"
                       class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500">
