--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -5,7 +5,7 @@
         <div class="flex h-16 items-center justify-between">
           <!-- Logo -->
           <div class="flex flex-1">
-            <a href="#">
+            <a href="{% url 'product-list' %}">
               <span class="sr-only">Re-position</span>
               <img class="h-8 w-auto"
                    src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
@@ -13,16 +13,14 @@
             </a>
           </div>
           <!-- Flyout menus -->
-          <div class="absolute inset-x-0 bottom-0 sm:static sm:flex-1 sm:self-stretch">
+          {% comment %} <div class="absolute inset-x-0 bottom-0 sm:static sm:flex-1 sm:self-stretch">
             <div class="flex h-14 space-x-8 overflow-x-auto border-t px-4 pb-px sm:h-full sm:justify-center sm:overflow-visible sm:border-t-0 sm:pb-0">
-              {% comment %}
               <a href="#" class="flex items-center text-sm font-medium text-gray-700 hover:text-gray-800">Women</a>
               <a href="#" class="flex items-center text-sm font-medium text-gray-700 hover:text-gray-800">Men</a>
               <a href="#" class="flex items-center text-sm font-medium text-gray-700 hover:text-gray-800">Company</a>
               <a href="#" class="flex items-center text-sm font-medium text-gray-700 hover:text-gray-800">Stores</a>
-              {% endcomment %}
             </div>
-          </div>
+          </div> {% endcomment %}
           <div class="flex flex-1 items-center justify-end gap-x-4">
             <!-- Search -->
             <a href="#" class="p-2 text-gray-400 hover:text-gray-500">
