Convert all url pattern name to snake case

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -5,7 +5,7 @@
         <div class="flex h-16 items-center justify-between">
           <!-- Logo -->
           <div class="flex flex-1">
-            <a href="{% url 'product-list' %}">
+            <a href="{% url 'product_list' %}">
               <span class="sr-only">Re-position</span>
               <img class="h-8 w-auto"
                    src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
