--- a/templates/components/product_list.html
+++ b/templates/components/product_list.html
@@ -17,7 +17,7 @@
           </div>
           <div class="flex flex-1 flex-col space-y-2 p-4">
             <h3 class="text-sm text-gray-700">
-              <a href="{% url 'product-detail' product.id %}">
+              <a href="{% url 'product_detail' product.id %}">
                 <span class="absolute inset-0"></span>
                 {{ product.name }}
               </a>
